# mvp_grasp

./: .gitignore  README.md  requirements.txt
cad/: panda_realsense_D4xx.stl
dougsm_helpers/: CMakeLists.txt  package.xml  setup.py
dougsm_helpers/scripts/: set_realsense_autoexposure.sh  test_build.py
dougsm_helpers/src/dougsm_helpers/: gridshow.py  ros_control.py  tf_helpers.py  timeit.py
franka_control_wrappers/: CMakeLists.txt  franka_control_wrappers_plugin.xml  package.xml  setup.py
franka_control_wrappers/config/: franka_controllers.yaml  franka_example_controllers.yaml
franka_control_wrappers/include/franka_control_wrappers/: cartesian_velocity_node_controller.h
franka_control_wrappers/launch/: cartesian_velocity_controller.launch
franka_control_wrappers/ros_nodes/: ap_grasping.py  ap_grasping_velo.py  set_panda_defaults.py  test_panda_commander.py
franka_control_wrappers/scripts/: ap_grasping.py  panda_open_loop_grasp.py
franka_control_wrappers/src/: cartesian_velocity_node_controller.cpp
franka_control_wrappers/src/franka_control_wrappers/: panda_commander.py
ggcnn/: CMakeLists.txt  package.xml  setup.py
ggcnn/cfg/: ggcnn_service.yaml  realsense.json
ggcnn/launch/: ggcnn_service.launch  wrist_realsense.launch
ggcnn/msg/: Grasp.msg
ggcnn/ros_nodes/: active_grasp.py  ggcnn_predict_rt.py  ggcnn_service.py  panda_active_grasp.py  panda_open_loop_grasp.py  panda_open_loop_grasp_singulated.py
ggcnn/src/ggcnn/: aegrasp.py  ggcnn.py  ggcnn_torch.py  grasp.py  grasp_stats.py  gridshow.py  heightmap.py  renderer.py
ggcnn/src/ggcnn/models/: epoch_14_iou_0.82_best  epoch_15_iou_0.81  epoch_24_iou_0.82_morezoom  epoch_29_model.hdf5  ggcnn_large.py  ggcnn_large_on_cornell
ggcnn/srv/: GraspPrediction.srv  NextViewpoint.srv
mvp_grasping/: CMakeLists.txt  package.xml  setup.py
mvp_grasping/cfg/: mvp_grasp.yaml  panda_setup.yaml  realsense.json
mvp_grasping/launch/: grasp_entropy_service.launch  robot_bringup.launch  wrist_realsense.launch
mvp_grasping/msg/: Grasp.msg
mvp_grasping/ros_nodes/: ap_grasping.py  ap_grasping_baseline.py  ap_grasping_velo.py  ap_grasping_velo_singulated.py  grasp_entropy_node.py  panda_fixed_baseline_grasp.py  panda_mvp_grasp.py  panda_open_loop_grasp.py
mvp_grasping/src/mvp_grasping/: grasp_stats.py  gridworld.py  panda_base_grasping_controller.py  renderer.py
mvp_grasping/srv/: NextViewpoint.srv
scales_interface/: CMakeLists.txt  README.md  package.xml
scales_interface/launch/: scales.launch
scales_interface/src/: scales.cpp
